--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
-    // Glide
 
     // Firebase Storage and Database
     def firebaseStorage = '19.1.1'
@@ -46,4 +45,12 @@ dependencies {
 
     // Circle Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Recyclerview ViewHolder generator
+    def groupie_version = '2.8.0'
+    implementation "com.xwray:groupie:$groupie_version"
+    implementation "com.xwray:groupie-kotlin-android-extensions:$groupie_version"
+
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
